# schemapie

./: .gitignore  README.md  install.sh  pyproject.toml
schemapie/: cli.py
schemapie/utils/: api.py  os.py
